--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -7,7 +7,7 @@ app = app
 module = %(app)
 
 #virtualenv folder
-home = /root/.anyenv/envs/pyenv/versions/anaconda3-5.0.1
+home = /usr/local/bin/anyenv/envs/pyenv/versions/anaconda3-5.0.1
 
 pythonpath = %(base)
 
